--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -21,10 +21,10 @@
   z-index: 1000;
   background-color: #fff;
   border-bottom: 1px solid transparent;
-  transition: border-color 0.3s ease;
+  transition: border-bottom 0.3s ease;
 
   &--scrolled {
-    border-color: #222;
+    border-bottom: 1px solid #0000001a;
   }
 
   &__content {
@@ -39,6 +39,10 @@
   }
 
   &__toggle {
+    &:focus {
+      outline: 1px solid rgb(21, 134, 255);
+      outline-offset: 3px;
+    }
     @media (min-width: tokens.$bp-md) {
       display: none;
     }
