--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,6 @@ button {
 
 .section {
   padding-block: 1.6rem;
-  height: 500px;
 }
 @media (min-width: 768px) {
   .section {
@@ -128,13 +127,33 @@ button {
   gap: 2rem;
 }
 
-.grid-6-a {
+.grid-2-a {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: auto;
   place-content: center;
   place-items: center;
-  gap: 1rem;
+  gap: 2rem;
+}
+@media (min-width: 768px) {
+  .grid-2-a {
+    display: grid;
+    grid-template-columns: max-content;
+    grid-template-rows: auto;
+    place-content: center;
+    place-items: center;
+    gap: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .grid-2-a {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    grid-template-rows: auto;
+    place-content: center;
+    place-items: center;
+    gap: 5rem;
+  }
 }
 
 .nav {
@@ -228,6 +247,17 @@ button {
 .nav__link--active {
   color: #000;
   font-weight: 600;
+}
+
+.components > section {
+  width: min(50rem, 75vw);
+  height: min(25rem, 75vw);
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
 
 .modal {
