ADD :: implement accordion component with setup functionality and styles

--- a/scss/components/_components-section.scss
+++ b/scss/components/_components-section.scss
@@ -1,7 +1,7 @@
 .components {
   & > section {
     width: min(50rem, 75vw);
-    height: min(25rem, 75vw);
+    min-height: min(25rem, 75vw);
     display: inline-flex;
     flex-direction: column;
     align-items: center;
